manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-otus
  namespace: m
  labels:
    app: microservice-otus
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice-otus
  template:
    metadata:
      labels:
        app: microservice-otus
    spec:
      containers:
      - name: otus
        image: azorinmsu/gs-spring-boot-docker:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
        volumeMounts:
        - name: spring-application-config
          mountPath: /config
      volumes:
      - name: spring-application-config
        configMap:
          name: spring-application-config
