manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-otus
  namespace: m
spec:
  selector:
    app: microservice-otus
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
